feat: combine os name and version

--- a/internal/web/templates/status.html
+++ b/internal/web/templates/status.html
@@ -95,10 +95,7 @@
             <div class="value">{{ .DeviceModel }}</div>
 
             <div class="label">OS</div>
-            <div class="value">{{ .OSName }}</div>
-
-            <div class="label">OS version</div>
-            <div class="value">{{ .OSVersion }}</div>
+            <div class="value">{{ .OSLabel }}</div>
           </div>
         </div>
 
