--- a/internal/web/templates/status.html
+++ b/internal/web/templates/status.html
@@ -76,6 +76,17 @@
         </div>
       </div>
 
+      <div class="rowcard" style="margin-bottom: 16px;">
+        <div class="metric">
+          <div class="label">Model</div>
+          <div class="value">{{ .DeviceModel }}</div>
+        </div>
+        <div class="metric">
+          <div class="label">OS</div>
+          <div class="value">{{ .OSLabel }}</div>
+        </div>
+      </div>
+
       <div class="card">
         {{ if .Metrics.ThrottledFlags }}
         <div class="section">
@@ -87,17 +98,6 @@
           </div>
         </div>
         {{ end }}
-
-        <div class="section">
-          <div class="section-title">Device</div>
-          <div class="grid">
-            <div class="label">Model</div>
-            <div class="value">{{ .DeviceModel }}</div>
-
-            <div class="label">OS</div>
-            <div class="value">{{ .OSLabel }}</div>
-          </div>
-        </div>
 
         <div class="section">
           <div class="section-title">MediaMTX</div>
