feat: add device model and OS info (#6)
* feat: show device model and OS info

* feat: combine os name and version

* feat: render device info as single-line

* Fix device model NUL trimming

--- a/internal/web/templates/status.html
+++ b/internal/web/templates/status.html
@@ -76,6 +76,17 @@
         </div>
       </div>
 
+      <div class="rowcard" style="margin-bottom: 16px;">
+        <div class="metric">
+          <div class="label">Model</div>
+          <div class="value">{{ .DeviceModel }}</div>
+        </div>
+        <div class="metric">
+          <div class="label">OS</div>
+          <div class="value">{{ .OSLabel }}</div>
+        </div>
+      </div>
+
       <div class="card">
         {{ if .Metrics.ThrottledFlags }}
         <div class="section">
