feat: show camera model

--- a/internal/web/templates/status.html
+++ b/internal/web/templates/status.html
@@ -91,6 +91,10 @@
           <div class="value">{{ .DeviceModel }}</div>
         </div>
         <div class="metric">
+          <div class="label">Camera</div>
+          <div class="value">{{ .CameraModel }}</div>
+        </div>
+        <div class="metric">
           <div class="label">OS</div>
           <div class="value">{{ .OSLabel }}</div>
         </div>
